# Terra_Incognita

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  initialise_server.sh  kloenk  main.cpp  retrieve_and_run_container.sh  tmp
.cache/clangd/index/: Character.cpp.97F76242B957B525.idx  GameConstants.h.568C3A0C9E16242B.idx  GameObject.cpp.7DFF3E53C37364BC.idx  GameObject.h.43279CFC35459737.idx  GameState.h.9DFF6E699A67F213.idx  Mesh.h.61D168F7B1BAAF8E.idx  MeshStore.h.C4B93B07D75EB5BD.idx  RenderSystem.h.734191EEF3B4FB47.idx  Shader.h.E39B752B464536DB.idx  _fixes.hpp.759AAF7D12F5296A.idx  _vectorize.hpp.03BB41D672B821E3.idx  common.h.C05800BF9439FC53.idx  common.hpp.29CCA1F476B6C9E2.idx  constants.hpp.6BEBFD16D486F1E8.idx  constants.inl.3585E004071B3B18.idx  egl.c.1118BAE4AE1A51A8.idx  egl.h.A17BA7CDDE1CB6FA.idx  eglplatform.h.C37D0E173E3A9A9E.idx  exponential.h.F236A6FF41E1FFA5.idx  exponential.hpp.617E7A3B7047EE22.idx  func_common.hpp.F15CAFFEF7CB082D.idx  func_common.inl.9A37F0AFA2C1AC04.idx  func_common_simd.inl.49EF320D7A41D7BA.idx  func_exponential.hpp.1D3ADC5117EC63A0.idx  func_exponential.inl.1C03BA873D9D23FD.idx  func_exponential_simd.inl.05974905D7DFDE53.idx  func_geometric.hpp.38E27B5B0F88AE7D.idx  func_geometric.inl.8392274DC5ECAEF7.idx  func_geometric_simd.inl.AC34BBF232619D3E.idx  func_integer.hpp.620FF37C8B510FD6.idx  func_integer.inl.CAE7A14B16BF6015.idx  func_integer_simd.inl.77E9546BBA6426F9.idx  func_matrix.hpp.6106A57426F1B1AD.idx  func_matrix.inl.7FB664D6845E9D49.idx  func_matrix_simd.inl.224E147F516D554C.idx  func_packing.hpp.FEFFC57D86B27A6B.idx  func_packing.inl.C19DFA61F331F8B1.idx  func_packing_simd.inl.C166E45D5C81E20B.idx  func_trigonometric.hpp.03199134A0BF0FF1.idx  func_trigonometric.inl.48CB6E6AE4A9DD7C.idx  (+75 more)
.github/: deploy-to-web.yml
.github/workflows/: deploy-to-web.yml  deploy.sh
glad/: CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: egl.h  glad.h  gles2.h
glad/src/: glad.c
resources/shaders/fragment/: basic_colours.fs
resources/shaders/vertex/: basic_positions.vs
resources/web/: nginx.conf  shell.html
src/: Character.cpp  EventProcessor.h  GameConstants.h  GameEvent.h  GameObject.cpp  GameObject.h  GameState.h  InputHandler.h  Mesh.h  MeshStore.h  MovementSystem.h  RenderSystem.h  Shader.h  basic_colours.fs  basic_positions.vs  main.cpp  shader_m.h
